edded batch change ft

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,10 @@
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 board = waveshare_esp32s3_touch_lcd_128
 framework = arduino
+build_flags = -DBOARD_HAS_PSRAM
+board_build.arduino.memory_type = qio_opi
+board_build.flash_mode = qio
+board_upload.flash_size = 16MB
 lib_deps = 
 	adafruit/Adafruit BusIO@^1.17.1
 	adafruit/Adafruit MAX31856 library@^1.2.7
